[package]
name = "cpe_test"
version = "4.1.0"
edition = "2021"
description = "CPE 子网测试工具：主控/辅测双机自动化 ping + iperf3 灌包测试"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tiny_http = "0.12"
wait-timeout = "0.2"
regex = "1"
encoding_rs = "0.8"
base64 = "0.22"
chrono = "0.4"
ctrlc = "3"
md5 = "0.7"
png = "0.17"

[target.'cfg(windows)'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_System_Console",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
] }

[profile.release]
lto = true
strip = true
